--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 ### FIXES
 
-# Fix weird bugs on OSX
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# Fix weird bugs on OSX (not needed on last OSX)
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 
 ### COLORS
